@@ -1,5 +1,5 @@
 ---------------
-| BWAPI 3.5.1 |
+| BWAPI 3.5.2 |
 ---------------
 
 The BWAPI web site    http://code.google.com/p/bwapi/
